--- a/index.html
+++ b/index.html
@@ -14,7 +14,37 @@
 
     <main>
         <section class="jeForm">
-            <form action=""></form>
+            <form action="">
+                <fieldset>
+                    <label for="journalDate">Date of Entry</label>
+                    <input type="date" name="journalDate" id="journalDate">
+                </fieldset>
+
+                <fieldset>
+                    <label for="journalConcept">Concepts Covered</label>
+                    <textarea name="journalConcept" id="journalConcept" cols="30" rows="2"></textarea>
+                </fieldset>
+
+                <fieldset>
+                    <label for="journalEntry">Journal Entry</label>
+                    <textarea name="journalEntry" id="journalEntry" cols="30" rows="3"></textarea>
+                </fieldset>
+
+                <fieldset>
+                    <label for="journalMood">Mood</label>
+                    <select name="journalMood" id="journalMood">
+                        <option value="happy">Happy</option>
+                        <option value="sad">Sad</option>
+                        <option value="excited">Excited</option>
+                        <option value="energetic">Energetic</option>
+                        <option value="jittery">Jittery</option>
+                    </select>
+                </fieldset>
+
+                <fieldset>
+                    <button type="button">Record Journal Entry</button>
+                </fieldset>
+            </form>
         </section>
 
         <section class="jeList">
