created and began populating journalData.js with journal entry objects

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                     <fieldset>
                         <label for="journalConcept">Concepts Covered</label>
-                        <textarea name="journalConcept" id="journalConcept" cols="30" rows="2"></textarea>
+                        <textarea name="journalConcept" id="journalConcept" cols="30" rows="1"></textarea>
                     </fieldset>
 
                     <fieldset>
@@ -34,6 +34,7 @@
                     <fieldset>
                         <label for="journalMood">Mood</label>
                         <select name="journalMood" id="journalMood">
+                            <option value="ok">Ok</option>
                             <option value="happy">Happy</option>
                             <option value="sad">Sad</option>
                             <option value="excited">Excited</option>
@@ -67,5 +68,6 @@
         </article>
     </footer>
     
+<script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
