rendered collections of journal entries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <h2>
-            <section class="jeForm">
+            <section class="journalEntryForm">
                 <form action="">
                     <fieldset>
                         <label for="journalDate">Date of Entry</label>
@@ -50,12 +50,12 @@
         </h2>
        
         <h3>
-            <section class="jeList">
-                <ol>Orderd List of Journal Entries
+            <section class="journalEntryList">
+                <!-- <ol>Orderd List of Journal Entries
                     <li> Entry1 <button></button> </li> 
                     <li> Entry2 <button></button> </li> 
                     <li> Entry3 <button></button> </li> 
-                </ol>
+                </ol> -->
             </section> 
         </h3>
     </main>
