styled and fixed je log automation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -61,9 +62,9 @@
     </main>
 
     <footer>
-        <article>MyName</article>
+        <article>Ha Nguyen</article>
         <article>
-            <a href="">GitHub link & copyright here</a>
+            <a href="https://github.com/justha">GitHub</a>
             <img src="" alt="">
         </article>
     </footer>
