additional log contents

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="" alt="">
-        <article>Daily Journal</article>
+        <h1>Daily Journal</h1>
     </header>
 
     <main>
